Seed data added. Serivce configurations added. Database created

--- a/BetStackAppApi/appsettings.json
+++ b/BetStackAppApi/appsettings.json
@@ -1,7 +1,10 @@
 {
+  "ConnectionStrings": {
+    "BetStackAppConnectionString": "Default",
+    "BetStackIdentityConnectionString": "Identity"
+  },
   "WebApiOptions": {
-    "ApiKey": "ApiKeyRapid",
-    "BetStackAppConnectionString": "Default"
+    "ApiKey": "ApiKeyRapid"
   },
   "Logging": {
     "LogLevel": {
